--- a/WindowInsetsAnimation/app/build.gradle
+++ b/WindowInsetsAnimation/app/build.gradle
@@ -22,7 +22,7 @@ android {
 
     defaultConfig {
         applicationId "com.google.android.samples.insetschat"
-        minSdkVersion 30
+        minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
@@ -45,9 +45,9 @@ android {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
-    implementation 'androidx.core:core-ktx:1.3.0'
+    implementation 'androidx.core:core-ktx:1.5.0-SNAPSHOT'
     implementation 'androidx.dynamicanimation:dynamicanimation-ktx:1.0.0-alpha03'
 
-    implementation 'androidx.appcompat:appcompat:1.2.0-rc01'
-    implementation 'com.google.android.material:material:1.2.0-beta01'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'com.google.android.material:material:1.2.1'
 }
