--- a/WindowInsetsAnimation/build.gradle
+++ b/WindowInsetsAnimation/build.gradle
@@ -15,7 +15,7 @@
  */
 
 buildscript {
-    ext.kotlin_version = "1.3.72"
+    ext.kotlin_version = "1.4.21"
 
     repositories {
         google()
@@ -23,7 +23,7 @@ buildscript {
     }
 
     dependencies {
-        classpath "com.android.tools.build:gradle:4.0.0"
+        classpath "com.android.tools.build:gradle:4.1.1"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
@@ -32,5 +32,8 @@ allprojects {
     repositories {
         google()
         jcenter()
+
+        // Using an AndroidX snapshot to try out the new WindowInsetsAnimation in AndroidX Core
+        maven { url 'https://androidx.dev/snapshots/builds/7027567/artifacts/repository' }
     }
 }
