--- a/WindowInsetsAnimation/app/build.gradle
+++ b/WindowInsetsAnimation/app/build.gradle
@@ -50,4 +50,6 @@ dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.2.0-rc01'
     implementation 'com.google.android.material:material:1.2.0-beta01'
+
+    implementation "androidx.constraintlayout:constraintlayout:2.0.4"
 }
